# music-server

./: .gitignore  Cargo.toml  orpheus-EXAMPLE.toml  orpheus-out.toml  orpheus.toml
src/: auth.rs  config.rs  db.rs  endpoints.rs  lib.rs  main.rs  responders.rs  service.rs
src/auth/: manager.rs
src/db/: accounts.rs  fs.rs
src/endpoints/: create_account.rs  login.rs
src/lib/: struct_utils.rs
src/responders/: create_account.rs  login.rs
src/service/: accounts.rs  auth.rs  fs.rs  scanner.rs
src/service/scanner/: chromaprint.rs  file_parser.rs  matcher.rs
