[package]
name = "orpheus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
bincode = "1.3.3"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
dirs = "5.0.1"
rayon = "1.10.0"
scrypt = "0.11.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
