[package]
name = "orpheus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
dirs = "5.0.1"
rayon = "1.10.0"
scrypt = "0.11.0"
serde = { version = "1.0.216", features = ["derive", "rc"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tracing = { version = "0.1.41", features = [
    "release_max_level_info",
    "max_level_trace",
] }
tracing-subscriber = "0.3.19"
chrono = "0.4.39"
papaya = { version = "0.1.7", features = ["serde"] }
pot = { version = "3.0.1", features = ["tracing"] }
audiotags = "0.5.0"
